--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "turbo": "next dev --turbo",
     "build": "next build",
     "start": "next start",
+    "postinstall": "prisma generate",
     "lint": "next lint"
   },
   "dependencies": {
