--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "@clerk/nextjs": "^5.6.0",
     "@hookform/resolvers": "^3.9.0",
     "@prisma/client": "5.19.1",
+    "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-popover": "^1.1.1",
+    "@radix-ui/react-radio-group": "^1.2.0",
     "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
@@ -36,7 +38,6 @@
     "react-day-picker": "8.10.1",
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
-    "sonner": "^1.5.0",
     "svix": "^1.35.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
