--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "cmdk": "1.0.0",
     "date-fns": "^2.28.0",
     "lucide-react": "^0.445.0",
+    "mercadopago": "^2.0.15",
     "next": "14.2.13",
     "next-themes": "^0.3.0",
     "react": "^18",
