--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@radix-ui/react-toast": "^1.2.1",
     "@react-email/components": "0.0.25",
     "@tanstack/react-table": "^8.20.5",
+    "@uploadthing/react": "^7.3.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "1.0.0",
@@ -48,6 +49,7 @@
     "svix": "^1.35.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
+    "uploadthing": "^7.5.2",
     "zod": "^3.23.8"
   },
   "devDependencies": {
